--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "2.1.1",
     "axios": "^1.3.2",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.35.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
